# getting-things-done

./: .editorconfig  .gitignore  README.md  com.github.overlisted.getting-things-done.yml  meson.build  meson.build~
data/: getting-things-done.appdata.xml.in  getting-things-done.desktop.in  gresource.xml  gschema.xml  meson.build  overrides.css
debian/: changelog  control  copyright
meson/: post_install.py
po/: POTFILES  com.github.overlisted.getting-things-done.pot  meson.build  nl.po  ru.po  ru.po~
src/: Application.vala  CellRendererTask.vala  Task.vala  TaskDetails.vala  TasksModel.vala  TasksView.vala  Window.vala  date_utils.vala  main.vala  meson.build
src/model/: Task.vala  TasksModel.vala
src/view/: CellRendererTask.vala  EditTaskDialog.vala  MainLayout.vala  NewTaskDialog.vala  PlaceholderPage.vala  RightHeader.vala  TaskDetails.vala  TasksView.vala  Window.vala
